--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
 
     <h2>Add React in One Minute</h2>
-    <p>This page demonstrates using React with no build tooling.</p>
+    <p>This page demonstrates using React with no build tooling🙂.</p>
     <p>React is loaded as a script tag.</p>
 
     <!-- We will put our React component inside this div. -->
